deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-dashboard-backend
  namespace: k8s-readonly-dashboard
  labels:
    app: k8s-dashboard-backend
spec:
  selector:
    app: k8s-dashboard-backend
  ports:
    - name: http
      port: 8000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-dashboard-frontend
  namespace: k8s-readonly-dashboard
  labels:
    app: k8s-dashboard-frontend
spec:
  selector:
    app: k8s-dashboard-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
